fixed zoom out glitch on mobile (IOS)

--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -61,7 +61,7 @@ body {
     height: 100dvh;
     &::before {
         content: "";
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
         transform: scale(5);
@@ -191,7 +191,7 @@ img {
 }
 
 .cp {
-    position: absolute;
+    position: fixed;
     bottom: 0.5em;
     right: 1em;
     color: #efefef99;
